--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,6 +221,7 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: 100%;
 		width: 1400px;
+		text-align: center;
 	}
 
 		@media screen and (min-width: 961px) and (max-width: 1880px) {
@@ -1777,8 +1778,9 @@ input, select, textarea {
 
 		.image.featured {
 			display: block;
-			width: 100%;
-			margin: 0 0 2em 0;
+			width: 60%;
+			margin: auto;
+			margin-bottom:2em;
 		}
 
 		.image.left {
@@ -2634,5 +2636,4 @@ input, select, textarea {
 				#footer .copyright li:first-child {
 					margin-top: 0;
 				}
-
 	}
